src/test/ui/const-eval/conditional_array_execution.stderr
error[E0080]: constant evaluation error
  --> $DIR/conditional_array_execution.rs:16:20
   |
LL |     println!("{}", FOO); //~ E0080
   |                    ^^^ referenced constant has errors

error[E0080]: constant evaluation error
  --> $DIR/conditional_array_execution.rs:13:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize]; //~ E0080
   |                   ^^^^^ attempt to subtract with overflow

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0080"
